Complete Docker OCI repository support